<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/root"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  tools:context="com.brunodles.nossoponto.LoginActivity"
  >

  <android.support.constraint.Guideline
    android:id="@+id/centerVertical"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_percent=".30"
    />

  <View
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@drawable/login_card"
    app:layout_constraintBottom_toBottomOf="@id/bottomMargin"
    app:layout_constraintLeft_toLeftOf="@id/leftMargin"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@id/topMargin"
    />

  <Space
    android:id="@+id/topMargin"
    android:layout_width="0dp"
    android:layout_height="16dp"
    app:layout_constraintBottom_toTopOf="@id/cardTitle"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintLeft_toRightOf="@id/centerVertical"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias=".75"
    app:layout_constraintVertical_chainStyle="packed"
    />

  <Space
    android:id="@+id/leftMargin"
    android:layout_width="16dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="@id/bottomMargin"
    app:layout_constraintLeft_toRightOf="@id/centerVertical"
    app:layout_constraintTop_toTopOf="@id/topMargin"
    />

  <TextView
    android:id="@+id/cardTitle"
    style="@style/TextAppearance.AppCompat.Large"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:text="Login"
    app:layout_constraintBottom_toTopOf="@id/username"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/topMargin"
    />

  <android.support.design.widget.TextInputLayout
    android:id="@+id/username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="Username"
    app:layout_constraintBottom_toTopOf="@+id/password"
    app:layout_constraintLeft_toRightOf="@id/leftMargin"
    app:layout_constraintRight_toRightOf="@id/cardTitle"
    app:layout_constraintTop_toBottomOf="@id/cardTitle"
    >

    <android.support.design.widget.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:imeOptions="actionNext"
      android:inputType="text"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="Password"
    app:layout_constraintBottom_toTopOf="@+id/login"
    app:layout_constraintLeft_toRightOf="@id/leftMargin"
    app:layout_constraintRight_toRightOf="@id/cardTitle"
    app:layout_constraintTop_toBottomOf="@id/username"
    >

    <android.support.design.widget.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:imeOptions="actionGo"
      android:inputType="textPassword"
      />

  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="SignIn"
    app:layout_constraintBottom_toTopOf="@id/bottomMargin"
    app:layout_constraintLeft_toRightOf="@id/leftMargin"
    app:layout_constraintRight_toRightOf="@id/cardTitle"
    app:layout_constraintTop_toBottomOf="@id/password"
    />

  <Space
    android:id="@+id/bottomMargin"
    android:layout_width="0dp"
    android:layout_height="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/centerVertical"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/login"
    />

</android.support.constraint.ConstraintLayout>
